# dynamic_dashboard

./: .env.example  .gitignore  CODE_CLEANUP_REFACTOR.md  CODE_CLEANUP_SUMMARY.md  README.md  REFACTORING_SUMMARY.md  SETUP.md  __init__.py  api.py  app.py  chat_handler.py  dashboard_renderer.py  main.py  pyproject.toml  ui_custom_styles.py  ui_layout.py  ui_styles.py
agents/: __init__.py  database_agent.py  nlu_agent.py  orchestrator.py  query_utils.py  response_generator.py
bi_adapters/: __init__.py  base.py  streamlit_adapter.py
config/: agent_config.yaml
core/: __init__.py  specs.py  transform.py
database/: __init__.py  db_manager.py  init.py  sample_data.py  schema.sql
examples/: comprehensive_demo.py  dark_comprehensive_demo.py  dark_theme_demo.py  ocean_theme_demo.py  simple_scorecard.py  timeseries_and_scorecard.py
themes/: __init__.py  base.py  css_builder.py  html_builders.py
