[project]
name = "dynamic-dashboard"
version = "0.1.0"
description = "A modular library for creating dynamic dashboards with direct data passing"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.51.0",
    "pandas>=2.3.0",
    "plotly>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "bi_adapters", "api.py"]
